Fix path problemer med ResourceHandleUtil.bytesFra() (#112)